This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: test_memoryview test_setitem_writable failures with Intel ICC
Type: behavior Stage:
Components: Tests Versions: Python 3.1, Python 3.2, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ivank, pitrou, skrah
Priority: normal Keywords: patch

Created on 2010-01-01 05:38 by ivank, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
memmove.patch pitrou, 2010-07-11 11:28
Messages (5)
msg97113 - (view) Author: ivank (ivank) Date: 2010-01-01 05:38
3 memoryview tests fail with Intel ICC 11.1. They don't fail with gcc
4.4.1-4ubuntu8 on the same machine.


======================================================================
FAIL: test_setitem_writable (__main__.BytesMemorySliceSliceTest)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "Lib/test/test_memoryview.py", line 98, in test_setitem_writable
    self._check_contents(tp, b, b"ababcf")
  File "Lib/test/test_memoryview.py", line 290, in _check_contents
    self.assertEquals(obj[1:7], tp(contents))
AssertionError: bytearray(b'ababaf') != bytearray(b'ababcf')

======================================================================
FAIL: test_setitem_writable (__main__.BytesMemorySliceTest)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "Lib/test/test_memoryview.py", line 98, in test_setitem_writable
    self._check_contents(tp, b, b"ababcf")
  File "Lib/test/test_memoryview.py", line 273, in _check_contents
    self.assertEquals(obj[1:7], tp(contents))
AssertionError: bytearray(b'ababaf') != bytearray(b'ababcf')

======================================================================
FAIL: test_setitem_writable (__main__.BytesMemoryviewTest)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "Lib/test/test_memoryview.py", line 98, in test_setitem_writable
    self._check_contents(tp, b, b"ababcf")
  File "Lib/test/test_memoryview.py", line 263, in _check_contents
    self.assertEquals(obj, tp(contents))
AssertionError: bytearray(b'ababaf') != bytearray(b'ababcf')



# icc --version
icc (ICC) 11.1 20090630

The OS is Ubuntu 9.10 64-bit in VMWare, running 2.6.31-16-server.

My configure options are:

export LANG=C
./configure --enable-unicode=ucs2 --with-gcc=icc --with-cxx-main=icc\
            OPT="-O2 -w1 -fomit-frame-pointer -xHost -multibyte-chars
-fp-model precise -no-prec-div"
msg109993 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2010-07-11 11:22
Confirmed with release27-maint, icc 11.0.
msg109994 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2010-07-11 11:28
Can you try with the following patch?
msg109997 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2010-07-11 11:56
Antoine, the patch works well.
msg109999 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2010-07-11 12:16
Thank you. This was fixed in r82814 (py3k), r82815 (2.7), r82816 (3.1).
History
Date User Action Args
2022-04-11 14:56:56adminsetgithub: 51865
2010-07-11 12:16:03pitrousetstatus: open -> closed
resolution: fixed
messages: + msg109999
2010-07-11 11:56:40skrahsetmessages: + msg109997
2010-07-11 11:33:48michael.foordsetnosy: - michael.foord
2010-07-11 11:28:16pitrousetfiles: + memmove.patch

nosy: + pitrou
messages: + msg109994

keywords: + patch
2010-07-11 11:22:18skrahsetnosy: + skrah
messages: + msg109993
2010-07-11 11:05:12BreamoreBoysetnosy: + michael.foord

components: + Tests, - Library (Lib)
versions: + Python 3.1, Python 3.2
2010-01-01 05:38:06ivankcreate