Issue #7616: Fix copying of overlapping memoryview slices with the Intel compiler.